All project details modals now have their own URLs/routes. Massive refactor needed to make this happen.

--- a/src/app/components/project-item/project-item.component.html
+++ b/src/app/components/project-item/project-item.component.html
@@ -1,4 +1,4 @@
-<a (click)="triggerItemClicked()">
+<a [routerLink]="routerLink">
   <div class="project-item" [style.background-image]="getBackgroundImage()">
     <div class="project-item-hover">
       <div>
