--- a/src/app/pages/projects/project-details/bombcastradio/bombcastradio.project.component.html
+++ b/src/app/pages/projects/project-details/bombcastradio/bombcastradio.project.component.html
@@ -1,8 +1,4 @@
-<app-project-section 
-  [title]="'Bombcast Radio'" 
-  [subtext]="'24/7 Giant Bombcast Stream'" 
-  [image]="'assets/project-images/thumbnail/bombcastradio.png'">
-
+<app-routable-modal>
   <h2>Bombcast Radio</h2>
   <article>
     <img src="assets/project-images/fullsize/bombcastradio.png" style="width: 519px; height: 300px;" />
@@ -11,4 +7,4 @@
     <p><a href="https://bitbucket.org/Pkshields/bombcast-radio/" target="_blank">View Source Code</a></p>
     <p><a href="https://bitbucket.org/Pkshields/bombcast-radio/src/master/README.md" target="_blank">Instructions on how to run the webapp locally</a></p>
   </article>
-</app-project-section>
+</app-routable-modal>
