--- a/src/app/pages/projects/project-details/foodiy/foodiy.project.component.html
+++ b/src/app/pages/projects/project-details/foodiy/foodiy.project.component.html
@@ -1,8 +1,4 @@
-<app-project-section 
-  [title]="'FooDIY'" 
-  [subtext]="'Proof of Concept Recipe App'" 
-  [image]="'assets/project-images/thumbnail/foodiy.png'">
-
+<app-routable-modal>
   <h2>FooDIY</h2>
   <article>
     <img src="assets/project-images/fullsize/foodiy.png" style="width: 530px;" />
@@ -11,4 +7,4 @@
 
     <p><a href="assets/pdf/FooDIY-BusinessPlan.pdf" target="_blank">Citi upStart Business Plan (PDF)</a></p>
   </article>
-</app-project-section>
+</app-routable-modal>
