--- a/src/app/pages/projects/project-details/gameframeworks/gameframeworks.project.component.html
+++ b/src/app/pages/projects/project-details/gameframeworks/gameframeworks.project.component.html
@@ -1,8 +1,4 @@
-<app-project-section 
-  [title]="'Game Frameworks'" 
-  [subtext]="'2D Game Frameworks in C# & C++'" 
-  [image]="'assets/project-images/thumbnail/gameframeworks.png'">
-
+<app-routable-modal>
   <h2>Game Frameworks</h2>
   <article>
     <p>I have developed two game frameworks so far: The C++ Game Framework and MuGameFramework.</p>
@@ -33,4 +29,4 @@
     <p><a href="https://bitbucket.org/Pkshields/mugameframework/" target="_blank">View Source Code</a></p>
     <p><a href="https://archive.paulshields.dev/mugameframework/docs/" target="_blank">View Documentation</a></p>
   </article>
-</app-project-section>
+</app-routable-modal>
