--- a/src/app/pages/projects/project-details/gameoflife/gameoflife.project.component.html
+++ b/src/app/pages/projects/project-details/gameoflife/gameoflife.project.component.html
@@ -1,8 +1,4 @@
-<app-project-section 
-  [title]="'Game of Life: Mafia Edition'" 
-  [subtext]="'Popular Board Game in XNA'" 
-  [image]="'assets/project-images/thumbnail/gameoflife.png'">
-
+<app-routable-modal>
   <h2>The Game of Life: Mafia Edition</h2>
   <article>
     <img src="assets/project-images/fullsize/gameoflife.png" style="width: 530px;" />
@@ -13,4 +9,4 @@
     <p><a href="https://bitbucket.org/Pkshields/the-game-of-life-mafia-edition/downloads/GameOfLife-Standalone-v1.0.zip">Download Game (Standalone)</a></p>
     <p><a href="https://bitbucket.org/Pkshields/the-game-of-life-mafia-edition/" target="_blank">View Source Code</a></p>
   </article>
-</app-project-section>
+</app-routable-modal>
