--- a/src/app/pages/projects/project-details/kinectxna/kinectxna.project.component.html
+++ b/src/app/pages/projects/project-details/kinectxna/kinectxna.project.component.html
@@ -1,8 +1,4 @@
-<app-project-section 
-  [title]="'KinectXNA'" 
-  [subtext]="'XNA Kinect Library & 3D Model'" 
-  [image]="'assets/project-images/thumbnail/kinectxna.png'">
-
+<app-routable-modal>
   <h2>KinectXNA</h2>
   <article>
     <img src="assets/project-images/fullsize/kinectxna.png" style="width: 530px;" />
@@ -16,4 +12,4 @@
 
     <p><a href="https://bitbucket.org/Pkshields/kinectxna/downloads/3D_Model.zip">Download 3D Model Demo (Code)</a></p>
   </article>
-</app-project-section>
+</app-routable-modal>
