--- a/src/app/pages/projects/project-details/muscreenmanager/muscreenmanager.project.component.html
+++ b/src/app/pages/projects/project-details/muscreenmanager/muscreenmanager.project.component.html
@@ -1,9 +1,5 @@
-<app-project-section 
-  [title]="'MuScreenManager'" 
-  [subtext]="'Screen Manager Library'" 
-  [image]="'assets/project-images/thumbnail/muscreenmanager.png'">
-
-  <h2>Web Based Physics Engines</h2>
+<app-routable-modal>
+  <h2>MuScreenManager</h2>
   <article>
     <img src="assets/project-images/fullsize/muscreenmanager.png" style="width: 530px;" />
     <p>MuScreenManager is an XNA class library that provides a screen management system, allowing for the simple integration of menus and .other screens into your game. It is based off the <a href="https://code.msdn.microsoft.com/windowsapps/Game-State-Management-b7869983">Game State Management</a> system provided my Microsoft, built completely from scratch. It can be seen in the demo provided below or in The Game of Life: Mafia Edition.</p>
@@ -14,4 +10,4 @@
     <p><a href="https://bitbucket.org/Pkshields/muscreenmanager/" target="_blank">View Source Code</a></p>
     <p><a href="https://archive.paulshields.dev/muscreenmanager/docs/" target="_blank">View Documentation</a></p>
   </article>
-</app-project-section>
+</app-routable-modal>
