--- a/src/app/pages/projects/project-details/particlesystem/particlesystem.project.component.html
+++ b/src/app/pages/projects/project-details/particlesystem/particlesystem.project.component.html
@@ -1,8 +1,4 @@
-<app-project-section 
-  [title]="'Particle System'" 
-  [subtext]="'Particle System in C++ and OpenGL'" 
-  [image]="'assets/project-images/thumbnail/particlesystem.png'">
-
+<app-routable-modal>
   <h2>Particle System</h2>
   <article>
     <img src="assets/project-images/fullsize/particlesystem.png" style="width: 530px; height: 300px;" />
@@ -12,4 +8,4 @@
     <p><a href="https://bitbucket.org/Pkshields/opengl-particle-system/downloads/ParticleSystem-2013-06-04.zip">Download Particle System (source)</a></p>
     <p><a href="https://bitbucket.org/Pkshields/opengl-particle-system" target="_blank">View Source Code</a></p>
   </article>
-</app-project-section>
+</app-routable-modal>
