--- a/src/app/pages/projects/project-details/physics4k/physics4k.project.component.html
+++ b/src/app/pages/projects/project-details/physics4k/physics4k.project.component.html
@@ -1,8 +1,4 @@
-<app-project-section 
-  [title]="'Physics4K'" 
-  [subtext]="'2D physics engine in C++'" 
-  [image]="'assets/project-images/thumbnail/physics4k.png'">
-
+<app-routable-modal>
   <h2>Physics4K</h2>
   <article>
     <img src="assets/project-images/fullsize/physics4k.png" style="width: 530px; height: 300px;" />
@@ -12,4 +8,4 @@
     <p><a href="https://bitbucket.org/Pkshields/physics4k" target="_blank">View Source Code</a></p>
     <p><a href="https://archive.paulshields.dev/physics4k/docs/" target="_blank">View Documentation</a></p>
   </article>
-</app-project-section>
+</app-routable-modal>
