--- a/src/app/pages/projects/project-details/thepixelunderground/thepixelunderground.project.component.html
+++ b/src/app/pages/projects/project-details/thepixelunderground/thepixelunderground.project.component.html
@@ -1,8 +1,4 @@
-<app-project-section 
-  [title]="'The Pixel Underground'" 
-  [subtext]="'Ludum Dare 29 Submission'" 
-  [image]="'assets/project-images/thumbnail/thepixelunderground.png'">
-
+<app-routable-modal>
   <h2>The Pixel Underground</h2>
   <article>
     <img src="assets/project-images/fullsize/thepixelunderground.png" style="width: 530px;" />
@@ -13,4 +9,4 @@
     <p><a href="https://bitbucket.org/Pkshields/ludum-dare-29/downloads/TPU-v1.0-Linux.zip">Download The Pixel Underground v1.0 - Linux</a></p>
     <p><a href="https://archive.paulshields.dev/thepixelunderground/" target="_blank">Download The Pixel Underground v1.0 - Web (default Unity page)</a></p>
   </article>
-</app-project-section>
+</app-routable-modal>
