--- a/src/app/pages/projects/project-details/undeadredemption/undeadredemption.project.component.html
+++ b/src/app/pages/projects/project-details/undeadredemption/undeadredemption.project.component.html
@@ -1,12 +1,8 @@
-<app-project-section 
-  [title]="'Undead Redemption'" 
-  [subtext]="'2D Shockwave game'" 
-  [image]="'assets/project-images/thumbnail/undeadredemption.png'">
-
-  <h2>Web Based Physics Engines</h2>
+<app-routable-modal>
+  <h2>Undead Redemption</h2>
   <article>
     <img src="assets/project-images/fullsize/undeadredemption.png" style="width: 530px;" />
     <p>Undead Redemption is a top down, dual joystick shooter, built using Lingo and Adobe Director. It is wave based with unlimited waves, with multiple types of zombies and weapon types. With the range of tactics using the weapons and the few nukes available and the gorgeous artstyle, we now have a good amount of players on our online leaderboard.</p>
     <p><a href="https://archive.paulshields.dev/undeadredemption/" target="_blank">Play Game</a></p>
   </article>
-</app-project-section>
+</app-routable-modal>
