--- a/src/app/pages/projects/project-details/vlappyman/vlappyman.project.component.html
+++ b/src/app/pages/projects/project-details/vlappyman/vlappyman.project.component.html
@@ -1,8 +1,4 @@
-<app-project-section 
-  [title]="'Vlappy Man'" 
-  [subtext]="'Flappy Jam 2013 Submission'" 
-  [image]="'assets/project-images/thumbnail/vlappyman.png'">
-
+<app-routable-modal>
   <h2>Vlappy Man</h2>
   <article>
     <img src="assets/project-images/fullsize/vlappyman.png" style="width: 530px;" />
@@ -15,4 +11,4 @@
     <p><a href="https://bitbucket.org/Pkshields/vlappy/downloads/VlappyMan-v1.0-Linux.zip">Download Vlappy Man v1.0 - Linux</a></p>
     <p><a href="https://archive.paulshields.dev/vlappy/" target="_blank">Download Vlappy Man v1.0 - Web (default Unity page)</a></p>
   </article>
-</app-project-section>
+</app-routable-modal>
