--- a/src/app/pages/projects/project-details/webphysics/webphysics.project.component.html
+++ b/src/app/pages/projects/project-details/webphysics/webphysics.project.component.html
@@ -1,8 +1,4 @@
-<app-project-section 
-  [title]="'Web Based Physics Engines'" 
-  [subtext]="'Researching physics engines in Unity &amp; WebGL'" 
-  [image]="'assets/project-images/thumbnail/webphysics.png'">
-
+<app-routable-modal>
   <h2>Web Based Physics Engines</h2>
   <article>
     <img src="assets/project-images/fullsize/webphysics.png" style="width: 530px;" />
@@ -21,4 +17,4 @@
     <p><a href="https://archive.paulshields.dev/webphysics/unity.html" target="_blank">Interactable Test Suite, used in the experiments</a></p>
     <p><a href="assets/pdf/Dissertation.pdf">Dissertation (PDF)</a></p>
   </article>
-</app-project-section>
+</app-routable-modal>
