--- a/src/app/pages/projects/project-details/windows8apps/windows8apps.project.component.html
+++ b/src/app/pages/projects/project-details/windows8apps/windows8apps.project.component.html
@@ -1,8 +1,4 @@
-<app-project-section 
-  [title]="'Windows 8 Apps'" 
-  [subtext]="'4 Windows 8 Apps'" 
-  [image]="'assets/project-images/thumbnail/windows8apps.png'">
-
+<app-routable-modal>
   <h2>Windows 8 Apps</h2>
   <article>
     <img src="assets/project-images/fullsize/windows8apps.png" style="width: 530px;" />
@@ -20,4 +16,4 @@
     <p><b>URL Lengthener</b>: Ever look at a shortened URL and wonder what it is linking to? Don't trust the person sending you the URL? Use URL Lengthener to find out what the real link is! Supports all major URL shortener services. The definitive URL Lengthener on Windows 8! This app supports such URL Shortening sites such as t.co, tinyurl.com, is.gd, bit.ly and many others.</p>
     <p><a href="https://bitbucket.org/Pkshields/url-lengthener" target="_blank">View the URL Lengthener Source Code</a></p>
   </article>
-</app-project-section>
+</app-routable-modal>
