--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -3,27 +3,136 @@
 </header>
 <article>
   <section>
+
     <h4>Video Games</h4>
-    <app-project-web-physics></app-project-web-physics>
-    <app-project-physics4k></app-project-physics4k>
-    <app-project-particle-system></app-project-particle-system>
-    <app-project-undead-redemption></app-project-undead-redemption>
-    <app-project-game-of-life></app-project-game-of-life>
-    <app-project-bulletheli></app-project-bulletheli>
+
+    <app-project-item 
+      title="Web Based Physics Engines" 
+      subtext="Researching physics engines in Unity &amp; WebGL" 
+      image="assets/project-images/thumbnail/webphysics.png" 
+      routerLink="webphysics"
+    ></app-project-item>
+    
+    <app-project-item 
+      title="Physics4K" 
+      subtext="2D physics engine in C++" 
+      image="assets/project-images/thumbnail/physics4k.png" 
+      routerLink="physics4k"
+    ></app-project-item>
+    
+    <app-project-item 
+      title="Particle System" 
+      subtext="Particle System in C++ and OpenGL" 
+      image="assets/project-images/thumbnail/particlesystem.png" 
+      routerLink="particlesystem"
+    ></app-project-item>
+    
+    <app-project-item 
+      title="Undead Redemption" 
+      subtext="2D Shockwave game" 
+      image="assets/project-images/thumbnail/undeadredemption.png" 
+      routerLink="undeadredemption"
+    ></app-project-item>
+    
+    <app-project-item 
+      title="Game of Life: Mafia Edition" 
+      subtext="Popular Board Game in XNA" 
+      image="assets/project-images/thumbnail/gameoflife.png" 
+      routerLink="gameoflife"
+    ></app-project-item>
+    
+    <app-project-item 
+      title="BulletHeli" 
+      subtext="2D XNA game" 
+      image="assets/project-images/thumbnail/bulletheli.png" 
+      routerLink="bulletheli"
+    ></app-project-item>
+
     <h4>Game Jams</h4>
-    <app-project-vlappy-man></app-project-vlappy-man>
-    <app-project-the-pixel-underground></app-project-the-pixel-underground>
+    
+    <app-project-item 
+      title="Vlappy Man" 
+      subtext="Flappy Jam 2013 Submission" 
+      image="assets/project-images/thumbnail/vlappyman.png" 
+      routerLink="vlappyman"
+    ></app-project-item>
+
+    <app-project-item 
+      title="The Pixel Underground" 
+      subtext="Ludum Dare 29 Submission" 
+      image="assets/project-images/thumbnail/thepixelunderground.png" 
+      routerLink="thepixelunderground"
+    ></app-project-item>
+
     <h4>Websites</h4>
-    <app-project-gbps3></app-project-gbps3>
-    <app-project-bombcast-radio></app-project-bombcast-radio>
+
+    <app-project-item 
+      title="GBPS3" 
+      subtext="GiantBomb.com Video on TV" 
+      image="assets/project-images/thumbnail/gbps3.png" 
+      routerLink="gbps3"
+    ></app-project-item>
+
+    <app-project-item 
+      title="Bombcast Radio" 
+      subtext="24/7 Giant Bombcast Stream" 
+      image="assets/project-images/thumbnail/bombcastradio.png" 
+      routerLink="bombcastradio"
+    ></app-project-item>
+
     <h4>Frameworks</h4>
-    <app-project-kinectxna></app-project-kinectxna>
-    <app-project-game-frameworks></app-project-game-frameworks>
-    <app-project-muscreenmanager></app-project-muscreenmanager>
-    <app-project-super-easy-php-templating></app-project-super-easy-php-templating>
+
+    <app-project-item 
+      title="KinectXNA" 
+      subtext="XNA Kinect Library & 3D Model" 
+      image="assets/project-images/thumbnail/kinectxna.png" 
+      routerLink="kinectxna"
+    ></app-project-item>
+
+    <app-project-item 
+      title="Game Frameworks" 
+      subtext="2D Game Frameworks in C# & C++" 
+      image="assets/project-images/thumbnail/gameframeworks.png" 
+      routerLink="gameframeworks"
+    ></app-project-item>
+
+    <app-project-item 
+      title="MuScreenManager" 
+      subtext="Screen Manager Library" 
+      image="assets/project-images/thumbnail/muscreenmanager.png" 
+      routerLink="muscreenmanager"
+    ></app-project-item>
+
+    <app-project-item 
+      title="SEPT" 
+      subtext="Super Easy PHP Templating Framework" 
+      image="assets/project-images/thumbnail/sept.png" 
+      routerLink="sept"
+    ></app-project-item>
+
     <h4>Extras</h4>
-    <app-project-windows-8-apps></app-project-windows-8-apps>
-    <app-project-foodiy></app-project-foodiy>
-    <app-project-brainfuck></app-project-brainfuck>
+
+    <app-project-item 
+      title="Windows 8 Apps" 
+      subtext="4 Windows 8 Apps" 
+      image="assets/project-images/thumbnail/windows8apps.png" 
+      routerLink="windows8apps"
+    ></app-project-item>
+
+    <app-project-item 
+      title="FooDIY" 
+      subtext="Proof of Concept Recipe App" 
+      image="assets/project-images/thumbnail/foodiy.png" 
+      routerLink="foodiy"
+    ></app-project-item>
+
+    <app-project-item 
+      title="Brainfuck Interpreter & UI" 
+      subtext="C++ Interpreter for the Minimal Language" 
+      image="assets/project-images/thumbnail/brainfuck.png" 
+      routerLink="brainfuck"
+    ></app-project-item>
+
+    <router-outlet></router-outlet> 
   </section>
 </article>
