--- a/src/app/pages/projects/project-details/brainfuck/brainfuck.project.component.html
+++ b/src/app/pages/projects/project-details/brainfuck/brainfuck.project.component.html
@@ -1,8 +1,4 @@
-<app-project-section 
-  [title]="'Brainfuck Interpreter & UI'" 
-  [subtext]="'C++ Interpreter for the Minimal Language'" 
-  [image]="'assets/project-images/thumbnail/brainfuck.png'">
-
+<app-routable-modal>
   <h2>Brainfuck Interpreter & UI</h2>
   <article>
     <img src="assets/project-images/fullsize/brainfuck.png" style="width: 441px;" />
@@ -18,4 +14,4 @@
     <p><a href="https://bitbucket.org/Pkshields/brainfuck-interpreter-ui/downloads/BrainfuckInterpreter-Linux64">Download Brainfuck Interpreter Terminal (Linux 64 bit)</a></p>
     <p><a href="https://bitbucket.org/Pkshields/brainfuck-interpreter-ui" target="_blank">View Source Code</a></p>
   </article>
-</app-project-section>
+</app-routable-modal>
