--- a/src/app/pages/projects/project-details/bulletheli/bulletheli.project.component.html
+++ b/src/app/pages/projects/project-details/bulletheli/bulletheli.project.component.html
@@ -1,8 +1,4 @@
-<app-project-section 
-  [title]="'BulletHeli'" 
-  [subtext]="'2D XNA game'" 
-  [image]="'assets/project-images/thumbnail/bulletheli.png'">
-
+<app-routable-modal>
   <h2>BulletHeli</h2>
   <article>
     <img src="assets/project-images/fullsize/bulletheli.png" style="width: 530px;" />
@@ -13,4 +9,4 @@
     <p><a href="https://bitbucket.org/Pkshields/bulletheli/downloads/BulletHeli-Standalone-v1.0.zip">Download Game (Standalone)</a></p>
     <p><a href="https://bitbucket.org/Pkshields/bulletheli/" target="_blank">View Source Code</a></p>
   </article>
-</app-project-section>
+</app-routable-modal>
