--- a/src/app/pages/projects/project-details/gbps3/gbps3.project.component.html
+++ b/src/app/pages/projects/project-details/gbps3/gbps3.project.component.html
@@ -1,8 +1,4 @@
-<app-project-section 
-  [title]="'GBPS3'" 
-  [subtext]="'GiantBomb.com Video on TV'" 
-  [image]="'assets/project-images/thumbnail/gbps3.png'">
-
+<app-routable-modal>
   <h2>GBPS3</h2>
   <article>
     <img src="assets/project-images/fullsize/gbps3.png" style="width: 535px; height: 298px;" />
@@ -10,4 +6,4 @@
     <p><a href="https://bitbucket.org/Pkshields/gbps3/" target="_blank">View Source Code</a></p>
     <p><a href="https://bitbucket.org/Pkshields/gbps3/src/master/README.md" target="_blank">Instructions on how to run the webapp locally</a></p>
   </article>
-</app-project-section>
+</app-routable-modal>
