Fixed the project-to-project links in the project details articles that contain them.

--- a/src/app/pages/projects/project-details/gameframeworks/gameframeworks.project.component.html
+++ b/src/app/pages/projects/project-details/gameframeworks/gameframeworks.project.component.html
@@ -4,7 +4,7 @@
     <p>I have developed two game frameworks so far: The C++ Game Framework and MuGameFramework.</p>
 
     <h3>The C++ Game Framework</h3>
-    <p>The C++ Game Framework is a 2D-3D game framework, built upon C++ and DirectX. It currently supports 2D development, simplifying many of the common functions within DirectX 11.1 into a more XNA style framework. It has support for drawing (textured an non textured) OBBs, circles and lines on screen simply. It also has support for inputs from the keyboard and mouse. It has only just been ported to DirectX 11.1 for Windows 8 but is still being worked on actively to improve stability and feature set. It was developed in conjunction with <a href="#!/projects/p4k">Physics4K</a>.</p>
+    <p>The C++ Game Framework is a 2D-3D game framework, built upon C++ and DirectX. It currently supports 2D development, simplifying many of the common functions within DirectX 11.1 into a more XNA style framework. It has support for drawing (textured an non textured) OBBs, circles and lines on screen simply. It also has support for inputs from the keyboard and mouse. It has only just been ported to DirectX 11.1 for Windows 8 but is still being worked on actively to improve stability and feature set. It was developed in conjunction with <a routerLink="../physics4k">Physics4K</a>.</p>
 
     <p><a href="https://bitbucket.org/Pkshields/the-c-game-framework/downloads/ExampleGame-2013-06-04.zip">Download The C++ Game Framework - Base Game</a></p>
     <p><a href="https://bitbucket.org/Pkshields/the-c-game-framework/downloads/CGameFramework-2013-06-04.zip">Download The C++ Game Framework - Source Code</a></p>
