--- a/src/app/pages/projects/project-details/physics4k/physics4k.project.component.html
+++ b/src/app/pages/projects/project-details/physics4k/physics4k.project.component.html
@@ -2,7 +2,7 @@
   <h2>Physics4K</h2>
   <article>
     <img src="assets/project-images/fullsize/physics4k.png" style="width: 530px; height: 300px;" />
-    <p>Physics4K is a 2D physics engine, built in C++. It was built using the ideas available from <a href="https://code.google.com/p/box2d/downloads/detail?name=Box2D_Lite.zip&can=2&q=" target="_blank">Box2D Lite</a> and it supports both Object Orientated Bounding Boxes and circle bounding areas, with collision generation and resolution working between then. The code is highly extendable to add more bounding areas, but is fully functional out of the box. Contained with the download is a demo game with 5 demos showing the capabilities of the engine. The demo was built using <a href="#!/projects/cgf">The C++ Game Framework</a>.</p>
+    <p>Physics4K is a 2D physics engine, built in C++. It was built using the ideas available from <a href="https://code.google.com/p/box2d/downloads/detail?name=Box2D_Lite.zip&can=2&q=" target="_blank">Box2D Lite</a> and it supports both Object Orientated Bounding Boxes and circle bounding areas, with collision generation and resolution working between then. The code is highly extendable to add more bounding areas, but is fully functional out of the box. Contained with the download is a demo game with 5 demos showing the capabilities of the engine. The demo was built using <a routerLink="../gameframeworks">The C++ Game Framework</a>.</p>
 
     <p><a href="https://bitbucket.org/Pkshields/physics4k/downloads/Physics4K-2013-06-04.zip">Download Physics4K</a></p>
     <p><a href="https://bitbucket.org/Pkshields/physics4k" target="_blank">View Source Code</a></p>
