Changed the email address on the Contacts page to be a paulshields.dev address.

--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -7,7 +7,7 @@
       <p>If you would like to contact me, feel free via the following methods:</p>
       <div>
         <ul>
-          <li class="email">Email: <a href="&#109;&#097;&#105;&#108;&#116;&#111;&#58;me&#064;pkshields.com"><span class="reverse">moc.sdleihskp@em</span></a></li>
+          <li class="email">Email: <a href="&#109;&#097;&#105;&#108;&#116;&#111;&#58;me&#064;paulshields.dev"><span class="reverse">ved.sdleihsluap@em</span></a></li>
           <li class="twitter">Twitter: <a href="http://twitter.com/pkshields" target="_blank">@Pkshields</a></li>
           <li class="linkedin">LinkedIn: <a href="http://uk.linkedin.com/pub/paul-shields/59/95b/8bb/" target="_blank">Link</a></li>
         </ul>
