Adding a background particles animation on the home page.

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,8 @@
 <div>
-  <div>
+  <div id="homepage-text">
     <p>Hello, my name is <span class="name">Paul Shields</span></p>
     <p>and I am a <span class="job-title">Software Engineer</span></p>
     <p>located in <span class="city">Belfast</span>, <span class="country">Northern Ireland</span>.</p>
   </div>
+  <particles [style]="particleCss" [params]="particleParams"></particles>
 </div>
