--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,5 +1,6 @@
 @import '../../../css/colors';
 @import '../../../css/fonts';
+@import '../../../css/mediasizes';
 
 $animation-speed: 0.9s;
 $animation-delay: 1.2s;
@@ -51,14 +52,14 @@ div {
 
 @media (max-width: 1100px) {
   div > #homepage-text > p {
-    font-size: 2.1em;
+    font-size: 2em;
     line-height: 3em;
   }
 }
 
-@media (max-width: 800px) {
+@media #{$mobile-size} {
   div > #homepage-text > p {
     font-size: 1.5em;
-    line-height: 3em;
+    line-height: 2em;
   }
 }
